Opernikus Backport
- BackendAlerting with LogVerbosity
- Added oemProvider for an improved WhiteList Channel handling for Influx/Aggregated data 
- Added ability to filter Edges. This can be used if you have mutliple DataBases and want to filter Edges (e.g. have one DataBase for Edges starting with certain id pattern etc)
-backend core provided example whitelists and test for such whitelist
-added implementation of OemProvider 
-Added explanation to "startServer" in EdgeWebsocketImpl as a comment
- Odoo: added the ability to configure the OdooUsername (Default admin)
- Aggregated Influx -> configurbale optional EdgeFilter and configurable Whitelist, only write into aggregated influx if edge id is fitting as well as channel is whitelisted
- UIWebsocket | Events Introduced ON_SET_ONLINE event -> when edges loose connection to the backend -> notify UI immediatly so the UI can show that the edge is offline, or switch back to online mode if connected again -> the user does not have to refresh the page etc.
- added OnSetOnline to the jsonrpc Notifications
- Added new Percolation and Volume Units for new MBus Meter Natures
- Fixed potential nullpointer exception in AppCenterIsKeyApplicableResponse
- ConfigUtils introduced method to generateAReferenceTargetFilter for UnitTests
- Removed DeflateDraft Extension from AbstractWebsocketServer since this i faulty when using / installing Apps
- ModbusBridge: Changed readElementOnce to readFC3HoldingRegisterElementOnce and introduced Fc4ReadInputElementOnce method
- added some ElementToChannelConverter
- Refactored Mbus to work the same way as the "old" Modbus Bridge (e.g. with AbstractMbusComponent and reference to the bridge)
- BridgeMbus extends the OpenemsComponent now and added text to Slave_Communication_failed channel
- improved ChannelDataRecordMapper
- improved ChannelRecord
- Introduced MbusComponent with Mbus_communication_failed channel
- improved Mbustask, added the ability to wait for the next poll (e.g. there are MBu